--- a/css/style.css
+++ b/css/style.css
@@ -1370,6 +1370,7 @@ a{
     padding-bottom: 3px;
 }
 .feedback .button{ 
+    font-weight: bold;
     width: 82.5%;
     padding-top: 9px;
     padding-bottom: 9px;
