--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,11 @@ select::-ms-expand{
     display: none;
 }
 .site-wrapper{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
     overflow: hidden;
     flex-direction: column;
 
@@ -58,14 +62,22 @@ select::-ms-expand{
     margin: -1px;
 }
 .main-header{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
     flex-direction: column;
 
     align-items: flex-end;
     justify-content: center;
 }
 .main-navigation{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     width: 100%;
 
@@ -76,7 +88,11 @@ select::-ms-expand{
     color: #fff;
 }
 .navigation-container{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 }
 .button{
     display: inline-block;
@@ -140,7 +156,11 @@ select::-ms-expand{
     line-height: 24px;
 }
 .site-navigation{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     margin-top: 20px;
     margin-bottom: 0;
@@ -322,13 +342,18 @@ select::-ms-expand{
 }
 .menu-search:hover .menu-search-sub{
     display: inline-block;
+    vertical-align: top;
 }
 .menu-search-sub .button-search{
     display: none;
 }
 .menu-cart,
 .menu-login{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     position: relative;
 }
@@ -387,6 +412,9 @@ select::-ms-expand{
     flex-wrap: wrap;
 }
 .form-login{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
 
     flex-wrap: wrap;
@@ -440,7 +468,11 @@ select::-ms-expand{
     position: relative;
 }
 .menu-cart:hover .menu-cart-sub{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 }
 .menu-cart-sub{
     display: none;
@@ -502,7 +534,11 @@ select::-ms-expand{
     padding-top: 10px;
 }
 .cart-table-item{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     margin-bottom: 17px;
 
@@ -598,11 +634,19 @@ select::-ms-expand{
     color: #fff;
 }
 .title-container{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
     flex-direction: column-reverse;
 }
 .bredcrumbs{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     margin-top: -20px;
     margin-bottom: 2px;
@@ -641,12 +685,17 @@ select::-ms-expand{
     line-height: 41px;
 }
 .form-filters{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
 
-    min-width: 870px;
+
+    max-width: 860px;
 
     flex-wrap: wrap;
     align-items: flex-start;
+    justify-content: space-between;
 }
 .form-filters ul{
     list-style: none;
@@ -678,7 +727,7 @@ select::-ms-expand{
     position: relative;
 
     margin: 0;
-    margin-right: 16px;
+
     margin-bottom: 38px;
     padding: 8px;
     padding-right: 12px;
@@ -788,7 +837,11 @@ select::-ms-expand{
     left: 133px;
 }
 .richness-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     margin: 0;
     padding: 0;
@@ -805,7 +858,7 @@ select::-ms-expand{
 .richness-list label::before{
     position: absolute;
     top: 0;
-    left: 0;
+    left: -2px;
 
     width: 22px;
     height: 22px;
@@ -835,7 +888,11 @@ select::-ms-expand{
     padding-top: 6px;
 }
 .fillers-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     margin: 0;
     padding: 0;
@@ -965,7 +1022,11 @@ select::-ms-expand{
     border-radius: 32px;
 }
 .slider-toggle-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     position: absolute;
     z-index: 20;
@@ -1013,7 +1074,11 @@ select::-ms-expand{
     background-color: #fff;
 }
 .banners{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     margin: 0 auto;
     margin-bottom: 37px;
@@ -1021,7 +1086,11 @@ select::-ms-expand{
     justify-content: center;
 }
 .banners-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     width: 100%;
     margin: 0;
@@ -1030,7 +1099,11 @@ select::-ms-expand{
     justify-content: space-between;
 }
 .banners-item{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
     flex-direction: column;
 
     box-sizing: border-box;
@@ -1084,7 +1157,11 @@ select::-ms-expand{
     width: calc(100vw - 5.5%);
 }
 .catalog-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     width: 100%;
     margin: 0;
@@ -1094,7 +1171,11 @@ select::-ms-expand{
     justify-content: space-between;
 }
 .hits-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     margin: 0;
     padding: 0;
@@ -1102,7 +1183,11 @@ select::-ms-expand{
     justify-content: space-between;
 }
 .hits-item{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
     flex-direction: column;
 
     position: relative;
@@ -1131,17 +1216,26 @@ select::-ms-expand{
 
     background-image: url('../img/hit.svg');
 }
-.hits-item h3{
+.hits-item-title{
     margin-top: 0;
-    margin-right: 10px;
     margin-bottom: 15px;
+    padding: 0;
+    padding-left: 3px;
 
+    z-index: 2;
+
+    color: #ffffff;
+
+    cursor: pointer;
+
+    order: 2;
+}
+.hits-item h3{
+    margin: 0;
     font-size: 16px;
 
     text-align: center;
     text-decoration: underline;
-
-    order: 2;
 }
 .hits-item b{
     font-size: 45px;
@@ -1185,7 +1279,7 @@ select::-ms-expand{
 }
 .hits-item:hover::before{
     position: absolute;
-    z-index: 3;
+    z-index: 0;
     top: -10px;
     left: -12px;
 
@@ -1211,6 +1305,7 @@ select::-ms-expand{
     margin-left: -100px;
 
     content: '';
+    vertical-align: top;
 }
 .features{
     box-sizing: border-box;
@@ -1232,7 +1327,11 @@ select::-ms-expand{
     line-height: 30px;
 }
 .features-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     margin: 0;
     padding: 0;
@@ -1284,7 +1383,11 @@ select::-ms-expand{
     background-image: url('../img/features-thermometer.svg');
 }
 .row-container{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     flex-wrap: wrap;
     justify-content: space-between;
@@ -1297,7 +1400,11 @@ select::-ms-expand{
     padding: 20px;
 }
 .blog-news{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
     flex-direction: column;
 
     padding-top: 22px;
@@ -1344,7 +1451,11 @@ select::-ms-expand{
     background-image: url('../img/subscribe-border.svg');
 }
 .subscribe-front{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
     flex-direction: column;
 
     box-sizing: border-box;
@@ -1362,7 +1473,11 @@ select::-ms-expand{
     margin: 0;
 }
 .form-subscribe{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     justify-content: space-between;
     align-items: flex-start;
@@ -1424,7 +1539,11 @@ select::-ms-expand{
     line-height: 24px;
 }
 .contacts-container{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     min-height: 430px;
 
@@ -1474,6 +1593,8 @@ select::-ms-expand{
     padding-bottom: 3px;
 
     color: #323232;
+
+    vertical-align: top;
 }
 .feedback .button{
     width: 82.5%;
@@ -1483,7 +1604,11 @@ select::-ms-expand{
     font-weight: bold;
 }
 .pagination-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     margin-top: 45px;
     margin-bottom: 22px;
@@ -1509,6 +1634,8 @@ select::-ms-expand{
 
     color: #fff;
     border-radius: 50%;
+
+    vertical-align: top;
 }
 .pagination-item:first-child{
     margin-right: 5px;
@@ -1549,7 +1676,11 @@ select::-ms-expand{
     background-color: transparent;
 }
 .main-footer{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     position: relative;
 
@@ -1590,7 +1721,11 @@ select::-ms-expand{
     font-size: 0;
 }
 .footer-social ul{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
 
     margin: 0;
     padding: 0;
@@ -1612,6 +1747,8 @@ select::-ms-expand{
     border-style: solid;
     border-color: rgba(255, 255, 255, .5);
     border-radius: 50%;
+
+    vertical-align: top;
 }
 .button-social:hover path{
     border: 2px solid #dae2de;
@@ -1624,7 +1761,11 @@ select::-ms-expand{
     fill: #e9e9e9;
 }
 .footer-link-list{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+
     flex-direction: column;
 
     width: 320px;
